MODBULKOPS-512 - Import workflow refactoring - using only one action for updating SRS records